@@ -1,0 +1,14 @@
+<html>
+<body>
+<script>
+    if (window.layoutTestController)
+        layoutTestController.dumpAsText();
+
+window.event = new Object;
+var iframe = document.createElement("iframe");
+document.body.appendChild(iframe);
+iframe.src = "resources/blank.html";
+</script>
+This test ensures that window.event can be set to a meaningless object (and immediately be used internally) without causing a crash.
+</body>
+</html>
